MyPL/tests/negative/err_query_no_args.logic
# Negative: query with no arguments — grammar requires args.
parent(bat, bold).
?- parent().
